# Major-Project-Experience

Android-使用最新Jetpack组件Compose架构开发/: Android课程设计文档模板 .docx  ~$droid课程设计文档模板 (1).docx
Android-使用最新Jetpack组件Compose架构开发/1开发日志/: 开发日志.md
Android-使用最新Jetpack组件Compose架构开发/2框架介绍/: 框架介绍.md
Android-使用最新Jetpack组件Compose架构开发/3实现思路/: 实现思路.md
Qt框架Linux服务器聊天室/q-chater-client-master/: QtUITest.pro  README.md  chatwindow.cpp  chatwindow.h  chatwindow.ui  clickablelabel.cpp  clickablelabel.h  creategroup.cpp  creategroup.h  creategroup.ui  friendcard.cpp  friendcard.h  loginhint.cpp  loginhint.h  loginhint.ui  loginwidget.cpp  loginwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  msgbubble.cpp  msgbubble.h  requesttype.h  res.qrc  signup.cpp  signup.h  signup.ui  style.cpp  style.h  style.ui  utility.cpp  utility.h  variable.cpp  variable.h
Qt框架Linux服务器聊天室/q-chater-server-master/: .gitignore  CMakeLists.txt  LICENCE  (+4 more)
RISC-V流水线CPU与FPGA驱动开发/: 1_小学期实验报告.docx  2_小学期实验报告.docx
云南省企业就业失业数据采集系统/: .env  .gitignore  LICENSE  docker-compose.yml  nginx.conf
内存和进程地址空间实时显示/: MW2.cpp
最优化方法-模拟退火，遗传算法/: README.txt  样例运行结果.txt
深度学习-风格迁移/: 深度学习-风格迁移.docx
终端目录复制命令/: mycp.cpp  mycp_linux  mycp_linux.cpp
网络安全-移动APP安全方向-HTTP捕获篡改/: 综 A102-移动APP安全方向-1120202944-董若扬.md
计算机图形学-多光源可移动场景/: README.txt  计算机图形学读书报告-1120202944-董若扬.md
计算机图形学-多光源可移动场景/OpenGL Project/: CMakeLists.txt  main.cpp  multiple_lights.fs
计算机图形学-多光源可移动场景/OpenGL Project/include/glad/: glad.h
计算机图形学-多光源可移动场景/OpenGL Project/include/learnopengl/: shader_m.h
计算机图形学-多光源可移动场景/OpenGL Project/src/: glad.c
(+243 files in other folders)
